We can't distinguish if the spinner button is pressed or unpressed

XMLWordPrintable

    • b07
    • linux

      With gtk3, the spinner up/down buttons are drawn in same way whether the button is pressed or not. We can't distinguish visually whether a button is pressed or not. The buttons should be highlighted when they are in pressed state. This works fine on gtk2.

            Assignee:
            Pankaj Bansal (Inactive)
            Reporter:
            Pankaj Bansal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: