8234733: We can't distinguish if the spinner button is pressed or unpressed

Reviewed-by: psadhukhan, prr